# android_audio_streamer

./: .gitignore  INTEGRATION_TEST_READY.md  README.md  README.txt  build.gradle.kts  local.properties  settings.gradle.kts  simple_udp_test.py  test_android_pc_integration.bat  test_android_pc_integration.sh  test_android_tcp.py  test_tcp.py  test_tcp_android.py  test_tcp_simple.py  test_udp_echo_server.py  tmp_rovodev_emulator_test_setup.md  tmp_rovodev_final_diagnosis.md  tmp_rovodev_monitor_logs.bat  tmp_rovodev_network_diagnostic.md  tmp_rovodev_test_multicast_lock.py  tmp_rovodev_test_steps.md  update_android_config.py
app/: build.gradle
app/src/androidTest/java/com/example/audiocapture/: OboeWrapperTest.kt  PerformanceTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/audiocapture/: AudioCaptureService.kt  AudioStream.kt  EncodingService.kt  MainActivity.kt  OboeWrapper.kt
app/src/main/java/com/example/audiocapture/encoder/: Encoder.kt  FFmpegEncoder.kt
app/src/main/java/com/example/audiocapture/network/: AudioPacket.kt  NetworkService.kt  UdpSender.kt
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/audiocapture/: AudioCaptureServiceOboeTest.kt  AudioCaptureServiceTest.kt  BasicUnitTest.kt  EncodingServiceTest.kt  SimplePacketTest.kt  SimpleUnitTest.kt  TestOboeWrapper.kt
app/src/test/java/com/example/audiocapture/integration/: AndroidPCIntegrationTest.kt
app/src/test/java/com/example/audiocapture/network/: AudioPacketTest.kt  NetworkServiceTest.kt
docs/: android_pc_integration_test_plan.md  flowchart.md  oboe_audio_integration_architecture.md  phase1_subtasks.md  phase2_completion_and_next_steps.md  phase4_android_integration_tasks.md  prd.md  project_roadmap.md
pc-receiver/: CMakeLists.txt  README.md  simple_test.cpp
pc-receiver/src/: audio_playback_test.cpp  debug_fec_header.cpp  main.cpp  tcp_receiver.cpp  test_fec_only.cpp
pc-receiver/src/audio/: adaptive_jitter_buffer.cpp  adaptive_jitter_buffer.h  audio_output.cpp  audio_output.h  audio_pipeline.cpp  audio_pipeline.h  jitter_buffer.cpp  jitter_buffer.h  mock_audio_output.cpp  mock_audio_output.h  mock_opus.cpp  mock_opus.h  opus_decoder.cpp  opus_decoder.h  real_audio_output.cpp  real_audio_output.h  real_opus_decoder.cpp  real_opus_decoder.h
pc-receiver/src/network/: fec_decoder.cpp  fec_decoder.h  fec_encoder.cpp  fec_encoder.h  network_monitor.cpp  network_monitor.h  packet.cpp  packet.h  qos_manager.cpp  qos_manager.h  udp_receiver.cpp  udp_receiver.h
pc-receiver/tests/: audio_test_main.cpp  integration_test.cpp  test_main.cpp
pc-receiver/tests/audio/: test_adaptive_jitter_buffer.cpp  test_audio_output.cpp  test_audio_pipeline.cpp  test_jitter_buffer.cpp  test_opus_decoder.cpp  test_real_audio_output.cpp  test_real_opus_decoder.cpp
pc-receiver/tests/network/: test_fec.cpp  test_network_monitor.cpp  test_packet.cpp  test_qos_manager.cpp  test_udp_receiver.cpp
